<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="16dp"
    android:paddingLeft="16dp">
    <Button
        android:id="@+id/btn_bai1"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:text="@string/bai1"
        android:textAllCaps="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp">
    </Button>
    <Button
        android:id="@+id/btn_bai2"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:text="@string/bai2"
        android:textAllCaps="true"
        android:layout_below="@id/btn_bai1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp">
    </Button>
    <Button
        android:id="@+id/btn_bai3"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:text="@string/bai3"
        android:textAllCaps="true"
        android:layout_below="@id/btn_bai2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp">
    </Button>
    <Button
        android:id="@+id/btn_bai4"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:text="@string/bai4"
        android:textAllCaps="true"
        android:layout_below="@id/btn_bai3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp">
    </Button>
    <Button
        android:id="@+id/btn_bai5"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:text="@string/bai5"
        android:textAllCaps="true"
        android:layout_below="@id/btn_bai4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp">
    </Button>
    <Button
        android:id="@+id/btn_bai6"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:text="@string/bai6"
        android:textAllCaps="true"
        android:layout_below="@id/btn_bai5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp">
    </Button>


</RelativeLayout>
